1. отдельная функция для решения задачи 2. проверка на создание массива и нулевой размер 3. упрощена функция записи результат в файл 4. добавлен ручной ввод заполнения массива и вектора 5. добавлены шаблоны функций

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
       "args": [],
       "stopAtEntry": false,
       "externalConsole": true,
-      "cwd": ".",
-      "program": "build/Debug/outDebug",
+      "cwd": "c:/Users/User/Desktop/OOP/Работа с массивами, файлами",
+      "program": "c:/Users/User/Desktop/OOP/Работа с массивами, файлами/build/Debug/outDebug",
       "MIMode": "gdb",
       "miDebuggerPath": "gdb",
       "setupCommands": [
